--- a/paginas/estilos/estilos_pagQRS.css
+++ b/paginas/estilos/estilos_pagQRS.css
@@ -61,10 +61,16 @@ button:hover {
     background-color: #45a049;
 }
 
-/* Estilos adicionales para mejorar la visibilidad del cuadro de texto */
 .numeroInput {
-    width: 100px; /* Ajusta el ancho según sea necesario */
+    width: 100px;
     text-align: center;
     margin: 0 5px;
     font-size: 16px;
+}
+
+.numeroEspecial {
+    font-size: inherit;
+    color: #007acc;
+    font-weight: bold;
+    font-style: normal;
 }
